--- a/css/theme_aria.css
+++ b/css/theme_aria.css
@@ -45,7 +45,7 @@ color:#c41e3a ;
   color:black;
 padding-top:20px;
    margin-right: 10px;
-   cursor:pointer;  
+   cursor:pointer;
 
 }
 .round-icons:hover{
@@ -53,12 +53,12 @@ padding-top:20px;
 }
 .footer_links{
   font-family: georgia;
-  
+
   font-size: 1.2em;
   color: rgb(89,89,89);
   margin-right:20px;
-    cursor:pointer;  
-  
+    cursor:pointer;
+
 }
 .footer_links:hover{
    color:#c41e3a;
@@ -80,18 +80,18 @@ padding-top:20px;
   border:1px solid rgb(89,89,89);
    color:rgb(89,89,89)!important;
   width:250px;
-  font-size: 1.3em!important; 
+  font-size: 1.3em!important;
   line-height: 1.5em;
-  vertical-align: top;  
+  vertical-align: top;
   font-weight: 400!important;
 }
 .btn-homepage:hover{
   padding-right:30px;
   color:#fff!important;
   padding-left:30px;
-  font-size: 1.3em!important; 
+  font-size: 1.3em!important;
   line-height: 1.5em;
-  vertical-align: top;  
+  vertical-align: top;
 }
 .draw-circle-icons{
   background-color: transparent;
@@ -100,14 +100,14 @@ padding-top:20px;
   width:80px;
   border-radius:50%;
   margin-bottom:40px;
-  
+
    border:1px solid #fff;
 }
 .flat{
   border-radius: 0px!important;
 }
 body {
-  
+
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1.25rem;
 line-height: 2.202rem;
@@ -158,7 +158,7 @@ border-color:#c41e3a;
    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif!important;
 
     font-style: normal!important;
- 
+
 }
 a:hover{
   text-decoration: none;
@@ -177,7 +177,7 @@ body .navbar.navbar-fixed-top {
 
 body .navbar {
   background: white;
-  -webkit-transition: background .4s ease; 
+  -webkit-transition: background .4s ease;
   -moz-transition: background .4s ease;
   -o-transition: background .4s ease;
   transition: background .4s ease;
@@ -217,7 +217,7 @@ body .navbar-nav > li > a {
  font-family:"Helvetica Neue",Helvetica,Arial,sans-serif!important;
 }
 
-body .navbar-nav > li > a:hover { 
+body .navbar-nav > li > a:hover {
   background: none;
   border-bottom: 2px solid #c41e3a;
 }
@@ -253,7 +253,7 @@ body .btn {
   -webkit-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
-  -webkit-transition: all .4s ease; 
+  -webkit-transition: all .4s ease;
   -moz-transition: all .4s ease;
   -o-transition: all .4s ease;
   transition: all .4s ease;
@@ -265,7 +265,7 @@ body .btn:hover {
   border-color: #c41e3a;
 }
 .fus-notfocus{
-  vertical-align: top;
+  vertical-align: top !important;
 }
 .col_5{
   width:20%;
@@ -313,7 +313,7 @@ body .fus-btn-white:hover {
 body .btn-primary {
   color: #fff;
   background: #00BBFC;
-  border-color: #00BBFC; 
+  border-color: #00BBFC;
 }
 
 body .btn-primary:hover {
@@ -405,7 +405,7 @@ body .fus-overlay {
   height: 100%;
   background:#3A92D7;
   opacity: 0;
-  -webkit-transition: all .4s ease; 
+  -webkit-transition: all .4s ease;
   -moz-transition: all .4s ease;
   -o-transition: all .4s ease;
   transition: all .4s ease;
@@ -494,21 +494,21 @@ body .fus-btns .btn {
 }
 
 .fus-section .fus-section-header {
- padding: 35px 0; 
+ padding: 35px 0;
  margin-bottom: 35px;
  text-align: center;
 }
 
 
 .fus-section .fus-section-header h3, .fus-section .fus-header h3 {
- font-size: 36px; 
+ font-size: 36px;
  font-weight: 100;
  line-height: 120%;
  margin: 0 0 5px 0;
 }
 
 .fus-section .fus-section-header h4, .fus-section .fus-header h4 {
- font-size: 18px; 
+ font-size: 18px;
  font-family: georgia;
  font-weight: 400;
  line-height: 140%;
@@ -526,7 +526,7 @@ body .fus-btns .btn {
   text-align: center;
   border: none;
   text-transform: capitalize!important;
-  
+
 }
 
 .fus-tabs li {
@@ -535,7 +535,7 @@ body .fus-btns .btn {
 
   width:120px;
 
-  
+
   padding-right:0px;
 
 
@@ -583,7 +583,7 @@ body .fus-btns .btn {
       text-transform: capitalize!important;
    font-family:Georgia!important;
  color:#595959;
-  
+
 }
 .fus-tabs li a:focus {
   outline: none;
@@ -598,7 +598,7 @@ body .fus-btns .btn {
   -o-border-radius: 50px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
-  -webkit-transition: background .4s ease; 
+  -webkit-transition: background .4s ease;
   -moz-transition: background .4s ease;
   -o-transition: background .4s ease;
   transition: background .4s ease;
@@ -608,7 +608,7 @@ body .fus-btns .btn {
 .fus-tabs li a .fus-subtitle {
   text-transform: capitalize;
 font-family:"Helvetica Neue",Helvetica,Arial,sans-serif!important;
- 
+
   letter-spacing: 1px;
   font-weight: 300;
   display: block;
@@ -717,7 +717,7 @@ font-family:"Helvetica Neue",Helvetica,Arial,sans-serif!important;
 .fus-pricing .fus-pricing-table .media-list .media .media-heading {
   font-weight: bold;
   font-size: 18px;
-  
+
   letter-spacing: 1px;
   text-align: left;
   margin-bottom: 7px;
@@ -743,17 +743,17 @@ font-family:"Helvetica Neue",Helvetica,Arial,sans-serif!important;
 
 .aria-hover {
   opacity: 0.5;
- 
+
   cursor:pointer;
-  
+
 }
 .aria-hover:hover{
 opacity: 1;
-  -webkit-transition: all .4s ease; 
+  -webkit-transition: all .4s ease;
   -moz-transition: all .4s ease;
   -o-transition: all .4s ease;
   transition: all .4s ease;
-  
+
 }
 .fus-pricing .fus-pricing-table .fus-list-header h5 {
   font-size: 14px;
@@ -778,7 +778,7 @@ opacity: 1;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-  
+
 .thumbnail {
   border: 1px solid #E6E7E8;
   background: white;
@@ -881,7 +881,7 @@ body .fus-nobtn:hover {
 
 .fus-as-seen > a {
   display: inline-block;
-  margin: 0 10px; 
+  margin: 0 10px;
 }
 
 footer ul {
@@ -959,7 +959,7 @@ body.fus-red .navbar.fus-navbar-solid {
 }
 
 @media (max-width: 768px) {
-  
+
   body.fus-red .navbar-collapse {
     background: rgba(215, 58, 64, 0.88);
   }
@@ -1059,18 +1059,18 @@ body.fus-black .navbar.fus-navbar-solid {
     position: absolute;
   }
    body .jumbotron .container{
-    
+
      display:inline-block;
      padding-top:150px;
 
   }
   body #pricing {
     background-color:rgba(0,0,0,0.1)!important;
-  
+
   }
   body footer {
     background-color:rgba(0,0,0,0.1)!important;
-  
+
   }
 }
 
@@ -1078,12 +1078,12 @@ body.fus-black .navbar.fus-navbar-solid {
   body .fus-tab-content > .tab-pane > .row > [class*="col-"].fus-photo img {
     width: 100%;
   }
-  
+
   body #select-options li:first-child {
     display: none;
   }
    body .jumbotron .container{
-  
+
      display:inline-block;
      padding-top:150px;
 
@@ -1103,7 +1103,7 @@ body.fus-black .navbar.fus-navbar-solid {
   }
   body .fus-btns .btn {
     margin-bottom: 15px;
-  } 
+  }
   body.fus-black .navbar-collapse {
     background: rgba(0, 0, 0, 0.43);
   }
@@ -1123,8 +1123,8 @@ body.fus-black .navbar.fus-navbar-solid {
 
   }
    .footer_social {text-align: center;}
-  
-   
+
+
 }
 
 @media (max-width: 989px) {
@@ -1132,54 +1132,54 @@ body.fus-black .navbar.fus-navbar-solid {
     background: #c41e3a ;
     height: 4px;
   }
-  
-  
-  
+
+
+
   body .fus-tab-content > .tab-pane > .row > [class*="col-"] {
     display: block;
     width: 100%;
     margin-bottom: 25px;
   }
-  
-  
+
+
   body .fus-tab-content p, body .fus-section .fus-header {
     text-align: center;
   }
-  
+
   body .fus-tab-content .btn {
     display: block;
   }
-  
+
   body .fus-tab-content img {
     max-width: 100%;
   }
-  
+
   body .fus-pricing .fus-pricing-table > [class*="col-"] {
     display: block;
     width: 100%;
     margin-bottom: 25px;
     float: left;
   }
-  
+
   body .fus-pricing .fus-pricing-table > [class*="col-"].fus-notfocus .media-list {
     width: 100%;
     padding: 25px;
   }
-  
+
   body .fus-pricing .fus-pricing-table {
     display: block;
     margin: 0;
     width: 100%;
   }
-  
+
   body .fus-as-seen > a {
     margin-bottom: 10px;
   }
-  
+
   body .fus-tab-content > .tab-pane > .row > [class*="col-"].fus-photo img {
     max-width: 100%;
   }
-  
+
   body footer ul > li > a {
     margin-bottom: 0;
     display: inline-block;
@@ -1212,7 +1212,7 @@ padding-top:150px;
 width: 200px;
 font-size: 1.2em;
 
-  } 
+  }
   .margin-left-home{
   margin-left:-10px;
   margin-top:30px;
@@ -1228,8 +1228,8 @@ font-size: 1.2em;
 /* iPhone landscape and iPad portrait */
 @media only screen and (max-device-width: 480px) and (orientation: landscape),
 @media only screen and (max-device-width: 640px) and (orientation: portrait)  {
-    body { 
-      
-       -webkit-text-size-adjust:none; 
+    body {
+
+       -webkit-text-size-adjust:none;
     }
 }
